app/registration/base/registration-command-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/seating
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"registration-command:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"registration-command\")].image"}]'
    app.openshift.io/connects-to: registerdb
  labels:
    app: register
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: registration-command
    app.kubernetes.io/name: registration-command
    app.kubernetes.io/part-of: register
    app.openshift.io/runtime: camel
  name: registration-command
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: registration-command
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: registration-command
        deploymentconfig: registration-command
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: registerdb
        - name: MYSQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: registerdb
        - name: MYSQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: registerdb
        - name: MYSQL_SERVICE
          value: registerdb
        image: image-registry.openshift-image-registry.svc:5000/seating/registration-command:latest
        imagePullPolicy: Always
        name: registration-command
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
