app/registration/base/registration-live-ui-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/gnunn1/seating
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"registration-live-ui:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"registration-live-ui\")].image"}]'
    app.openshift.io/connects-to: registration-command
  labels:
    app: register
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: registration-live-ui
    app.kubernetes.io/name: registration-live-ui
    app.kubernetes.io/part-of: register
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: registration-live-ui
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: registration-live-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: registration-live-ui
        deploymentconfig: registration-live-ui
    spec:
      containers:
      - name: registration-live-ui
        image: image-registry.openshift-image-registry.svc:5000/seating/registration-live-ui
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
