app/registration/base/registration-live-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: register
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: registration-live-ui
    app.kubernetes.io/name: registration-live-ui
    app.kubernetes.io/part-of: register
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: registration-live-ui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: registration-live-ui
    deploymentconfig: registration-live-ui
  sessionAffinity: None
  type: ClusterIP
