app/registration/base/registration-simulator-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: register
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: registration-simulator
    app.kubernetes.io/name: registration-simulator
    app.kubernetes.io/part-of: register
    app.openshift.io/runtime: camel
  name: registration-simulator
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: jolokia
    port: 8778
    protocol: TCP
    targetPort: 8778
  - name: prometheus
    port: 9779
    protocol: TCP
    targetPort: 9779
  selector:
    app: registration-simulator
    deploymentconfig: registration-simulator
  sessionAffinity: None
  type: ClusterIP
