app/registration/base/registration-command-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: register
    app.kubernetes.io/component: service
    app.kubernetes.io/instance: registration-command
    app.kubernetes.io/name: registration-command
    app.kubernetes.io/part-of: register
    app.openshift.io/runtime: camel
  name: registration-command
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: registration-command
    weight: 100
  wildcardPolicy: None
