app/registration/base/registration-live-ui-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: register
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: registration-live-ui
    app.kubernetes.io/name: registration-live-ui
    app.kubernetes.io/part-of: register
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "10"
  name: registration-live-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: registration-live-ui
    weight: 100
  wildcardPolicy: None
